fix z-index with header button

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 4;
 
   @include min(lg) {
     padding: var(--space-l);
